# gh0st

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: release.sh
src/: main.rs
src/app/: crawl.rs  data_io.rs  mod.rs  runtime.rs  tui.rs  types.rs  ui_utils.rs
