[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.4"
flate2 = "1.1"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spider = { version = "2.45", features = ["sync", "webdriver", "headers"] }
tar = "0.4"
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
url = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
