[package]
name = "gh0st"
version = "2026.2.19"
edition = "2021"
authors = ["Michael Wallner"]
description = "Phantom-fast web crawling and SEO analysis in your terminal"
license = "MIT"
repository = "https://github.com/yourusername/gh0st"
keywords = ["crawler", "seo", "tui", "web-scraper", "spider"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.4"
flate2 = "1.1"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spider = { version = "2.45", features = ["sync", "webdriver", "headers"] }
tar = "0.4"
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
url = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
